--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ Et plein d’autres choix possibles.
 <!-- // end .section -->
 
 <footer class="my-5 text-center"><!-- Copyright removal is not prohibited! -->
-<p class="mb-2"><small>COPYRIGHT &copy; 2020-2030. Tout Droits R&eacute;serv&eacute;s &agrave; Arts-Plastiques Mariette. Site con&ccedil;u par VIVIEN</small></p>
-<small><a class="m-2" href="">Presse</a> <a class="m-2" href="ml.pdf">Conditions</a> <a class="m-2" href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees">RGPD</a> </small></footer>
+<p class="mb-2"><small>COPYRIGHT &copy; 2020-2030. Tout Droits R&eacute;serv&eacute;s &agrave; Arts-Plastiques Mariette. Site con&ccedil;u par Vivien</small></p>
+<small><a class="m-2" href="ml.pdf" target="_blank">Presse</a> <a class="m-2" href="ml.pdf" target="_blank">Conditions</a> <a class="m-2" href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees" target="_blank">RGPD</a> </small></footer>
 <!-- jQuery and Bootstrap --><script src="js/jquery-3.2.1.min.js"></script><script src="js/bootstrap.bundle.min.js"></script><!-- Plugins JS --><script src="js/owl.carousel.min.js"></script><!-- Custom JS --><script src="js/script.js"></script></body>
 </html>
